# ParallelTheory

./: 1.cpp  CMakeLists.txt  Makefile  README.md
lab2/: slau.cpp  table.csv
lab3/: task1.cpp  task2.cpp  test_task2.cpp
lab4/: 1.py
lab5/: 1.py  Makefile  README.md
lab6/: Makefile  cpu.cpp  gpu.cpp
lab7/: Makefile  task.cpp
lab8/: Makefile  task.cu
